--- a/src/css/Workshop.scss
+++ b/src/css/Workshop.scss
@@ -244,3 +244,14 @@ overflow: auto;
 
 	
 }
+@media (min-width:768px) and (max-width:1024px){
+.main {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: 20px;
+	box-sizing: border-box;
+	margin-top: 15%;
+	margin-right: 30%;
+}
+}
