--- a/src/css/caro.css
+++ b/src/css/caro.css
@@ -61,3 +61,14 @@
         text-align: center;
     }
 }
+
+@media (min-width:768px) and (max-width:1024px){
+    .caro-container img{
+        margin-top: 4%;
+        width: 9200px;
+        height: 100%;
+        aspect-ratio: 3/2;
+        object-fit: cover;
+    }   
+   
+}
