--- a/src/css/team.css
+++ b/src/css/team.css
@@ -129,9 +129,7 @@
         font-size: 10px;
         top:100px;
         z-index: 1;
-        text-align: center;
-       
-        
+        text-align: center;  
     }
     .ateamvideo-team{
         position: absolute;
@@ -139,5 +137,26 @@
         margin-top: -15%;
         margin-left: 50px;
         border-radius: 30px;
+    }
+}
+@media (min-width:768px) and (max-width:1024px){
+    .ateamvideo-team{
+        position: absolute;
+        width: 400px;
+        margin-top: 65%;
+        margin-left: 50px;
+        border-radius: 30px;
+    }
+    .teamtxt p{
+        position: absolute;
+        top: 35%;
+        margin-left: 60%;
+        width: 30%;
+        text-align: center;
+        /* font-size: 25px; */
+        font-family: 'Caveat', cursive;
+        margin-top: -20px;
+       color: black;
+       
     }
 }
