--- a/src/css/workshop.css
+++ b/src/css/workshop.css
@@ -118,6 +118,20 @@ font-family: 'Archivo Black', sans-serif;
     
     } */
 }
+@media (min-width:768px) and (max-width:1024px){
+    .workshop-side-btns {
+        position: absolute;
+        margin-top: -60px;
+        margin-left: 25%;
+        display: flex;
+        flex-direction: row;
+        gap: 2rem;
+    }
+    .Workshop-image img{
+        display: none;
+    }
+  
+}
 
 
 
