--- a/src/pagecss/Productdetail.css
+++ b/src/pagecss/Productdetail.css
@@ -1,6 +1,10 @@
 .detile-image img{
-    width:800px;
+    width:300px;
     object-fit: contain;
+}
+.payment-Require p{
+    margin-top: 30px;
+   
 }
 .lod{
     width: 200px;
@@ -11,16 +15,29 @@
 }
 .product-main-box{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     margin-top: 10%;
     position: absolute;
+    width: 100%;
 }
-.product-detile button{
+.Add-btn{
     margin-left: 1px;
     margin-right: 70px;
-    background-color: yellow;
-    border: 1px solid black;
+    background-color: #45CAFB;
+    border: none;
+    border-radius: 10px;
+    padding: 10px;
+    color: white;
+    box-shadow: 0px 18px 15px -3px rgba(0,0,0,0.1);
+}
+.buy-btn{
+    margin-left: 1px;
+    color: white;
+    margin-right: 70px;
+    background-color: #43D14A;
+    box-shadow: 0px 18px 15px -3px rgba(0,0,0,0.1);
+    border: none;
     border-radius: 10px;
     padding: 10px;
 }
@@ -38,4 +55,8 @@
     font-size: 20px;   
     margin-top: 30px;
     margin-bottom: 30px;
+}
+.cart-container{
+    width: 100%;
+
 }
