--- a/src/pagecss/Productnav.css
+++ b/src/pagecss/Productnav.css
@@ -1,29 +1,107 @@
 .mentoon-nav{
-    background-color: #FFDA00;
+    background-color: #F48B34;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-top: -1.3%;
+    margin-top: 1px;
     position: fixed;
     height: 90px;
 }
+.cartimg{
+  position: absolute;
+  margin-top: 15px;
+  margin-left: 66px;
+  width: 70px;
+}
 .mentoons-logo{
-    width: 150px;
+  margin-top: 20px;
+    width: 110px;
 }
 .mentoons-links {
     display: flex;
-    
+    margin-top: -2%;
+    gap: 20px;
 }
+
 .cart-icon{
-    font-size: 20px;
+    color: #FFDA00;
+    border-radius: 20px;
+    font-size: 40px;
+  position: absolute;
+  margin-right: 110px;
+  z-index: 1;
+}
+.share{
+    position: absolute;
+    color: #FFDA00;
+    border-radius: 20px;
+    font-size: 40px;
+    margin-top: 30px;
+   cursor: pointer;
+margin-left: -7%;
+  z-index: 1; 
 }
 .mentoons-links li{
-  color: white;
+    color: #FFDA00;
   padding: 10px;
   border-radius: 20px;
+  margin-top: 20px;
 margin-right: 30px;
+font-size: 40px;
+
 }
 .mentoons-links li:hover{
-    background-color: white;
     color: #FFDA00;
 }
+.number{
+    border-radius: 100%;
+    position: absolute;
+    border:3px solid #FFDA00;
+    width: 30px;
+    height: 30px;
+    z-index: 1;
+    margin-left: 20px;
+    margin-top: -2px;
+}
+.mentoons-links img{
+    position: absolute;
+    width: 90px;
+    margin-left: -80px;
+    margin-top: -27px;
+}
+.mentoons-links p{
+    margin-left: 30%;
+    margin-top: 2%;
+    z-index: 3;
+    font-size: 15px;
+    position: absolute;
+    color: white;
+}
+.container-input {
+    position: relative;
+  }
+  
+  .input {
+    width: 150px;
+    padding: 10px 0px 10px 40px;
+    border-radius: 9999px;
+    border: solid 1px #333;
+    transition: all .2s ease-in-out;
+    outline: none;
+    opacity: 0.8;
+    margin-top: 7px;
+  }
+  
+  .container-input svg {
+    position: absolute;
+    top: 50%;
+    left: 10px;
+    transform: translate(0, -50%);
+  }
+  
+  .input:focus {
+    opacity: 1;
+    width: 250px;
+  }
+
+  
