--- a/src/pagecss/Showcase.css
+++ b/src/pagecss/Showcase.css
@@ -2,15 +2,61 @@
 *{
     font-family: 'Poppins', sans-serif;
 }
-.box-a,.box-b,.box-c,.box-d,.box-e,.box-f,.box-g{
-    margin-left: 10px;
-    background-color:#00AEEf;
-    height: 180px;
-    width: 200px;
-    margin-top: 20px;
+.add h4{
+  position: absolute;
+    margin-left: -20%;
+    margin-top: -5%;
+    font-size: 30px;
+}
+.box-a{
+    margin-top: -10%;
+    margin-left: -130%;
+    background-color:#f1f1f1;
+    width: 193%;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
     border-radius: 10px;
+}
+.box-a img{
+    width: 100px;
+}
+
+.box{
+    margin-left: 40px;
+    background-color:#f1f1f1;
+    width: 33%;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
+    border-radius: 10px;
+}
+.box img{
+    width: 100px;
+}
+.showcase-box{
+    display: flex;
     flex-wrap: wrap;
- 
+    gap: 2rem;
+    width: 190%;
+} 
+.hole-showcase{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+.showcase-main h1{
+    margin: 10px;
+    font-size: 30px;
+}
+.showcase-side-line{
+    border-left: 2px solid #F79F07;
+    height: 40vh;
+    margin-right: 25%;
 }
 
 .catgory-main-container p{
@@ -19,10 +65,15 @@
    
    
 }
+/* .add-box h1{
+margin-top: -90%;
+margin-left: -190%;
+} */
+
 .catgory-main-container h2{
     position: absolute;
     color: black;
-    margin-top: -4%;
+    margin-top: -8%;
     font-size: 30px;
     margin-left: 20px;
 }
@@ -41,4 +92,7 @@
 .category-boxes p{
     text-align: center;
     color: white;
+}
+.add{
+    width: 50%;
 }
